# pptx_gen

./: .gitignore  README.md  pyproject.toml
docs/: PRD.md  ppt-master 试用.md  ppt-master 试用报告.md  ppt_master_试用与功能对比报告.md
pptx_gen/: __main__.py  cli.py  config.py  mermaid_utils.py  schemas.py
pptx_gen/llm/: __init__.py  client.py  generator.py  prompts.py
pptx_gen/pipeline/: runner.py
pptx_gen/ppt/: __init__.py  builder.py
pptx_gen/render/: __init__.py  mermaid.py
pptx_gen/template/: __init__.py  parser.py
