[project]
name = "pptx-gen"
version = "0.1.0"
description = "PPT 模板解析、分页生成与自动组装工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-pptx>=0.6.21",
    "edge-tts>=7.2.8",
    "svglib>=1.5.0",
    "reportlab>=4.0.0",
    "PyMuPDF>=1.23.0",
    "mammoth>=1.6.0",
    "markdownify>=0.11.6",
    "ebooklib>=0.18",
    "nbconvert>=7.0.0",
    "openpyxl>=3.1.0",
    "Pillow>=9.0.0",
    "numpy>=1.20.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "curl_cffi>=0.7.0",
    "google-genai>=1.0.0",
    "flask>=3.0.0",
    "mmdc>=0.4.1",
    "pydantic>=2.8,<3",
    "python-dotenv>=1.0,<2",
]

[project.scripts]
pptx-gen = "pptx_gen.cli:main"

[dependency-groups]
dev = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pptx_gen*"]

[tool.uv]
index-url = "https://mirrors.tencent.com/pypi/simple"
